# cooking_book

./: README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.render  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/routes/: recipes.py
data/recipes/: Auntie_susan_egg_cass.md  angelnette.md  anise_cookies.md  basic_muffins.md  best-zucchini-squash-bread-IMG_7881.md  blueberry_cake.md  blueberry_scones.md  cake-roll-sauce-IMG_7905.md  cast_iron_cornbread.md  castellans-applesauce-cake-IMG_7930.md  cheese-puffs-IMG_7877.md  easter-bread-IMG_7886.md  feather-sponge-cake-IMG_7938.md  irish_soda_bread.md  italian-fried-pastry-IMG_7907.md  jen_gray_carrot_cake.md  lemon-squares-IMG_7947.md  lemon-sunshine-cake-IMG_7932.md  manicotti-IMG_7950.md  minas_pea_soup.md  mince-meat-cake-IMG_7923.md  moms_black_bean_dip.md  nanas_apple_pie.md  nanas_snow_pudding.md  nonnies_mac_cheese.md  nonnies_meatballs_sauce.md  nonnies_sugar_cutout_cookies.md  part_potatoes.md  picnic-pudding-IMG_7945.md  pine-pie-IMG_7890.md  pineapple-sauce-for-cake-roll-IMG_7922.md  strawberry-roll-IMG_7902.md  stuffed_mushrooms.md  thumbprint_cookies.md  warmed-cranberry-brie-IMG_7873.md  zucchini-bread-IMG_7880.md
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
