[project]
name = "cooking-book-backend"
version = "0.1.0"
description = "Backend for cookbook app: OCR images -> Markdown recipes."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "python-multipart==0.0.20",
  "pydantic==2.10.4",
]

[tool.uvicorn]
factory = false


